--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -230,7 +230,8 @@
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/auth_twitter"
             android:launchMode="singleTask"
-            android:windowSoftInputMode="stateHidden" >
+            android:windowSoftInputMode="stateHidden"
+            android:exported="false">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
@@ -435,7 +436,8 @@
         <activity
             android:name="cgeo.geocaching.log.LogTrackableActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
-            android:label="@string/trackable_touch" >
+            android:label="@string/trackable_touch"
+            android:exported="false">
 
             <!-- GeoKrety.org QRCode-->
             <intent-filter>
@@ -460,7 +462,8 @@
         <activity
             android:name=".CacheDetailActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:exported="false">
             <intent-filter>
                 <action android:name="wikitudeapi.arcallback" />
 
@@ -656,7 +659,8 @@
         <activity
             android:name="cgeo.geocaching.TrackableActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:exported="false">
 
             <!-- TravelBug URL via coord.info redirection -->
             <intent-filter>
@@ -747,7 +751,8 @@
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name"
             android:launchMode="singleTask"
-            android:windowSoftInputMode="stateHidden" >
+            android:windowSoftInputMode="stateHidden"
+            android:exported="false">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
@@ -763,7 +768,8 @@
         <activity
             android:name=".CreateShortcutActivity"
             android:label="@string/cgeo_shortcut"
-            android:parentActivityName="cgeo.geocaching.MainActivity" >
+            android:parentActivityName="cgeo.geocaching.MainActivity"
+            android:exported="false">
             <intent-filter>
                 <action android:name="android.intent.action.CREATE_SHORTCUT" />
 
@@ -786,7 +792,8 @@
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name"
             android:launchMode="singleTask"
-            android:windowSoftInputMode="stateHidden" >
+            android:windowSoftInputMode="stateHidden"
+            android:exported="false">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
@@ -799,7 +806,8 @@
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name"
             android:launchMode="singleTask"
-            android:windowSoftInputMode="stateHidden" >
+            android:windowSoftInputMode="stateHidden"
+            android:exported="false">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
@@ -812,7 +820,8 @@
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name"
             android:launchMode="singleTask"
-            android:windowSoftInputMode="stateHidden" >
+            android:windowSoftInputMode="stateHidden"
+            android:exported="false">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
@@ -825,7 +834,8 @@
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name"
             android:launchMode="singleTask"
-            android:windowSoftInputMode="stateHidden" >
+            android:windowSoftInputMode="stateHidden"
+            android:exported="false">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
@@ -843,7 +853,8 @@
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name"
             android:launchMode="singleTask"
-            android:windowSoftInputMode="stateHidden" >
+            android:windowSoftInputMode="stateHidden"
+            android:exported="false">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
@@ -911,7 +922,8 @@
         </provider>
 
         <!-- Receiver for downloaded (map) files -->
-        <receiver android:name=".downloader.DownloadNotificationReceiver">
+        <receiver android:name=".downloader.DownloadNotificationReceiver"
+            android:exported="false">
             <intent-filter>
                 <action android:name="android.intent.action.DOWNLOAD_COMPLETE" />
             </intent-filter>
