fix typo in bug_report template

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,5 +1,5 @@
 name: 1. 🐞 Bug Report
-description: Report a bug or problem with c:geo direclty to our GitHub tracker
+description: Report a bug or problem with c:geo directly to our GitHub tracker
 # title: ""
 labels: [Bug, Unverified]
 # assignees: 
