--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,5 @@
+commit_message: "[skip ci]"
+append_commit_message: true
 files:
   - source: /main/res/values/strings.xml
     translation: /main/res/values-%two_letters_code%/%original_file_name%
