Work on #12391 - Use correct placeholder

--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,6 +1,6 @@
 pull_request_title: "Translations from Crowdin"
 pull_request_labels: ["Translation"]
-commit_message: "%file_name% - %language% translation [skip ci]"
+commit_message: "%original_file_name% - %language% translation [skip ci]"
 append_commit_message: false
 files:
   - source: /main/res/values/strings.xml
