Switch to Gradle 7.x (#12307)
* move to gradle 7

With AS 2020.3.x we can use gradle 7.
Details:
- update gradle 6.8.3 to 7.3.3
- Follow up:
  - addd new lint rule checkDependencies true
  - check - checkstyle relation must be ordered

--- a/main/build.gradle
+++ b/main/build.gradle
@@ -149,7 +149,6 @@ android {
             res.srcDirs = ['res']
             assets.srcDirs = ['assets']
             aidl.srcDirs = ['src'] // default src/main/aidl creates package name conflicts in Eclipse
-            jni.srcDirs = []
         }
         // local unit tests, which can be executed without a device
         test {
@@ -190,6 +189,10 @@ android {
 
         // ExtraTranslation - old translation will be deleted by the next crowdin import
         disable 'ExtraTranslation'
+
+        // analyze all dependency modules in parallel and produce a single report
+        // including issues from the app and all of its dependencies
+        checkDependencies true
     }
 
     packagingOptions {
@@ -639,5 +642,5 @@ tasks.register('checkstyle', Checkstyle) {
 }
 
 tasks.named('check') {
-    dependsOn tasks.named('checkstyle')
+    mustRunAfter tasks.named('checkstyle')
 }
