--- a/cgeo-contacts/AndroidManifest.xml
+++ b/cgeo-contacts/AndroidManifest.xml
@@ -19,7 +19,8 @@
         <activity
             android:name=".ContactsActivity"
             android:label="@string/app_name"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar" >
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="cgeo.contacts.FIND" />
 
