--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,6 +10,9 @@ updates:
       # Ignore some updates to the apache 'commons-io' package
       # commons-io 2.6 uses java.nio.file.Path - which is first contained in Android API26
       - dependency-name: "commons-io:commons-io"
+      # Ignore some updates to the apache 'commons-lang3' package
+      # commons-lang3 3.12.0 uses StringJoiner which is first contained in Android API24
+      - dependency-name: "org.apache.commons:commons-lang3"
       # Ignore some updates to the 'assertj' package
       # Ignore only new versions for >= 3.x
       - dependency-name: "org.assertj:assertj-core"
