--- a/main/build.gradle
+++ b/main/build.gradle
@@ -287,7 +287,9 @@ dependencies {
     // Apache Commons
     implementation 'org.apache.commons:commons-collections4:4.4'
     implementation 'org.apache.commons:commons-compress:1.20'
-    // commons-lang3 3.12.0 uses StringJoiner which is first contained in API24. See https://github.com/cgeo/cgeo/issues/12577
+    // commons-lang3 3.12.0 uses StringJoiner which is first contained in Android API24
+    // See https://github.com/cgeo/cgeo/issues/12577
+    //noinspection GradleDependency
     implementation 'org.apache.commons:commons-lang3:3.11'
     implementation 'org.apache.commons:commons-text:1.9'
 
