Download caches as non blocking service - first alpha version for #330

--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -921,6 +921,8 @@
 
         <service android:name=".downloader.ReceiveDownloadService" />
 
+        <service android:name=".service.CacheDownloaderService" />
+
         <!-- Receiver for custom tabs share intent -->
         <receiver android:name=".settings.ShareBroadcastReceiver"/>
     </application>
