--- a/mapswithme-api/build.gradle
+++ b/mapswithme-api/build.gradle
@@ -20,16 +20,16 @@ android {
         res.srcDirs = ['res']
     }
 
-    lintOptions {
-        // generally we accept lint errors when building
-        abortOnError false
-
-        // abort release builds in case of FATAL errors
-        checkReleaseBuilds true
-    }
 
     dependencies {
         // Android annotations
         implementation 'androidx.annotation:annotation:1.3.0'
+    }
+    lint {
+	// generally we accept lint errors when building
+        abortOnError false
+
+	// abort release builds in case of FATAL errors
+        checkReleaseBuilds true
     }
 }
