Revert "Resort repo sources"
This reverts commit ed289faba487af92a5b99dbb68dda9a0dc0bc428.

--- a/build.gradle
+++ b/build.gradle
@@ -123,10 +123,9 @@ allprojects {
  */
 subprojects {
     repositories {
-        google()
-        // Android Support libraries are now in an oline Maven repository
         mavenCentral()
-        
+        // Android Support libraries are now in an online Maven repository
+        google()
         // integrate as last one - for versions by commit ID
         maven {
             url 'https://jitpack.io'
