--- a/main/build.gradle
+++ b/main/build.gradle
@@ -412,7 +412,7 @@ dependencies {
     implementation "androidx.annotation:annotation:$annotationVersion"
     androidTestImplementation "androidx.annotation:annotation:$annotationVersion"
 
-    // emoji support
+    // emoji compat support
     def emojiVersion = '1.1.0'
     implementation "androidx.emoji:emoji:$emojiVersion"
     implementation "androidx.emoji:emoji-bundled:$emojiVersion"
