--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ plugins {
 
     // check for updates of gradle plugin dependencies
     id 'com.github.ben-manes.versions' version '0.42.0'
+    id 'se.ascp.gradle.gradle-versions-filter' version "0.1.10"
 
     // use SpotBugs instead of FindBugs, see https://plugins.gradle.org/plugin/com.github.spotbugs
     id 'com.github.spotbugs' version '4.7.6'
